--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
             crossorigin=""></script>
     
     <!-- Custom JavaScript -->
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     
     <!-- Modal Scripts -->
     <script>
@@ -667,4 +667,5 @@
     </script>
 </body>
 </html>
+
 
