Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                                     <i class="fas fa-car-side"></i>
                                 </div>
                                 <div class="vehicle-info">
-                                    <h4>Luxury Sedan</h4>
+                                    <h4>Executive Sedans</h4>
                                     <p>Up to 4 passengers</p>
                                     <div class="vehicle-rate">R12/km</div>
                                 </div>
@@ -260,7 +260,7 @@
                                     <i class="fas fa-truck"></i>
                                 </div>
                                 <div class="vehicle-info">
-                                    <h4>SUV</h4>
+                                    <h4>7-Seater</h4>
                                     <p>Up to 6 passengers</p>
                                     <div class="vehicle-rate">R15/km</div>
                                 </div>
@@ -275,8 +275,8 @@
                                     <i class="fas fa-van-shuttle"></i>
                                 </div>
                                 <div class="vehicle-info">
-                                    <h4>Van (7 Seater)</h4>
-                                    <p>Up to 7 passengers</p>
+                                    <h4>Executive Vans(V-CLASS)</h4>
+                                    <p>Up to 6 passengers</p>
                                     <div class="vehicle-rate">R18/km</div>
                                 </div>
                                 <div class="vehicle-selector">
@@ -290,8 +290,8 @@
                                     <i class="fas fa-bus-alt"></i>
                                 </div>
                                 <div class="vehicle-info">
-                                    <h4>Van (14 Seater)</h4>
-                                    <p>Up to 14 passengers</p>
+                                    <h4>MVP(STARIA)</h4>
+                                    <p>Up to 7 passengers</p>
                                     <div class="vehicle-rate">R25/km</div>
                                 </div>
                                 <div class="vehicle-selector">
@@ -305,8 +305,8 @@
                                     <i class="fas fa-bus"></i>
                                 </div>
                                 <div class="vehicle-info">
-                                    <h4>Minibus</h4>
-                                    <p>Up to 20 passengers</p>
+                                    <h4>Group Minibuse</h4>
+                                    <p>Up to 16 passengers</p>
                                     <div class="vehicle-rate">R30/km</div>
                                 </div>
                                 <div class="vehicle-selector">
@@ -509,7 +509,7 @@
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <span class="contact-label">Email Support</span>
-                                <span class="contact-value">modjadjishuttle@gmail.com</span>
+                                <span class="contact-value">info@techport.co.za</span>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -679,6 +679,7 @@
     </script>
 </body>
 </html>
+
 
 
 
